gts-macros/tests/compile_fail/version_missing_in_struct.stderr
error: struct_to_gts_schema: schema_id 'gts.x.core.events.type.v1~' has a version but struct 'BaseEvent' does not have a version suffix. Add 'V1' suffix to the struct name (e.g., 'BaseEventV1')
  --> tests/compile_fail/version_missing_in_struct.rs:14:12
   |
14 | pub struct BaseEvent {
   |            ^^^^^^^^^

warning: unused import: `gts::GtsInstanceId`
 --> tests/compile_fail/version_missing_in_struct.rs:4:5
  |
4 | use gts::GtsInstanceId;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
